Sep 16th, Modify Adam, further use SGD to verify proportion

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,560 @@ screenshots
 environment.yml
 LICENSE.md
 README.md
+tandt/train/images/00001.jpg
+tandt/train/images/00002.jpg
+tandt/train/images/00003.jpg
+tandt/train/images/00004.jpg
+tandt/train/images/00005.jpg
+tandt/train/images/00006.jpg
+tandt/train/images/00007.jpg
+tandt/train/images/00008.jpg
+tandt/train/images/00009.jpg
+tandt/train/images/00010.jpg
+tandt/train/images/00011.jpg
+tandt/train/images/00012.jpg
+tandt/train/images/00013.jpg
+tandt/train/images/00014.jpg
+tandt/train/images/00015.jpg
+tandt/train/images/00016.jpg
+tandt/train/images/00017.jpg
+tandt/train/images/00018.jpg
+tandt/train/images/00019.jpg
+tandt/train/images/00020.jpg
+tandt/train/images/00021.jpg
+tandt/train/images/00022.jpg
+tandt/train/images/00023.jpg
+tandt/train/images/00024.jpg
+tandt/train/images/00025.jpg
+tandt/train/images/00026.jpg
+tandt/train/images/00027.jpg
+tandt/train/images/00028.jpg
+tandt/train/images/00029.jpg
+tandt/train/images/00030.jpg
+tandt/train/images/00031.jpg
+tandt/train/images/00032.jpg
+tandt/train/images/00033.jpg
+tandt/train/images/00034.jpg
+tandt/train/images/00035.jpg
+tandt/train/images/00036.jpg
+tandt/train/images/00037.jpg
+tandt/train/images/00038.jpg
+tandt/train/images/00039.jpg
+tandt/train/images/00040.jpg
+tandt/train/images/00041.jpg
+tandt/train/images/00042.jpg
+tandt/train/images/00043.jpg
+tandt/train/images/00044.jpg
+tandt/train/images/00045.jpg
+tandt/train/images/00046.jpg
+tandt/train/images/00047.jpg
+tandt/train/images/00048.jpg
+tandt/train/images/00049.jpg
+tandt/train/images/00050.jpg
+tandt/train/images/00051.jpg
+tandt/train/images/00052.jpg
+tandt/train/images/00053.jpg
+tandt/train/images/00054.jpg
+tandt/train/images/00055.jpg
+tandt/train/images/00056.jpg
+tandt/train/images/00057.jpg
+tandt/train/images/00058.jpg
+tandt/train/images/00059.jpg
+tandt/train/images/00060.jpg
+tandt/train/images/00061.jpg
+tandt/train/images/00062.jpg
+tandt/train/images/00063.jpg
+tandt/train/images/00064.jpg
+tandt/train/images/00065.jpg
+tandt/train/images/00066.jpg
+tandt/train/images/00067.jpg
+tandt/train/images/00068.jpg
+tandt/train/images/00069.jpg
+tandt/train/images/00070.jpg
+tandt/train/images/00071.jpg
+tandt/train/images/00072.jpg
+tandt/train/images/00073.jpg
+tandt/train/images/00074.jpg
+tandt/train/images/00075.jpg
+tandt/train/images/00076.jpg
+tandt/train/images/00077.jpg
+tandt/train/images/00078.jpg
+tandt/train/images/00079.jpg
+tandt/train/images/00080.jpg
+tandt/train/images/00081.jpg
+tandt/train/images/00082.jpg
+tandt/train/images/00083.jpg
+tandt/train/images/00084.jpg
+tandt/train/images/00085.jpg
+tandt/train/images/00086.jpg
+tandt/train/images/00087.jpg
+tandt/train/images/00088.jpg
+tandt/train/images/00089.jpg
+tandt/train/images/00090.jpg
+tandt/train/images/00091.jpg
+tandt/train/images/00092.jpg
+tandt/train/images/00093.jpg
+tandt/train/images/00094.jpg
+tandt/train/images/00095.jpg
+tandt/train/images/00096.jpg
+tandt/train/images/00097.jpg
+tandt/train/images/00098.jpg
+tandt/train/images/00099.jpg
+tandt/train/images/00100.jpg
+tandt/train/images/00101.jpg
+tandt/train/images/00102.jpg
+tandt/train/images/00103.jpg
+tandt/train/images/00104.jpg
+tandt/train/images/00105.jpg
+tandt/train/images/00106.jpg
+tandt/train/images/00107.jpg
+tandt/train/images/00108.jpg
+tandt/train/images/00109.jpg
+tandt/train/images/00110.jpg
+tandt/train/images/00111.jpg
+tandt/train/images/00112.jpg
+tandt/train/images/00113.jpg
+tandt/train/images/00114.jpg
+tandt/train/images/00115.jpg
+tandt/train/images/00116.jpg
+tandt/train/images/00117.jpg
+tandt/train/images/00118.jpg
+tandt/train/images/00119.jpg
+tandt/train/images/00120.jpg
+tandt/train/images/00121.jpg
+tandt/train/images/00122.jpg
+tandt/train/images/00123.jpg
+tandt/train/images/00124.jpg
+tandt/train/images/00125.jpg
+tandt/train/images/00126.jpg
+tandt/train/images/00127.jpg
+tandt/train/images/00128.jpg
+tandt/train/images/00129.jpg
+tandt/train/images/00130.jpg
+tandt/train/images/00131.jpg
+tandt/train/images/00132.jpg
+tandt/train/images/00133.jpg
+tandt/train/images/00134.jpg
+tandt/train/images/00135.jpg
+tandt/train/images/00136.jpg
+tandt/train/images/00137.jpg
+tandt/train/images/00138.jpg
+tandt/train/images/00139.jpg
+tandt/train/images/00140.jpg
+tandt/train/images/00141.jpg
+tandt/train/images/00142.jpg
+tandt/train/images/00143.jpg
+tandt/train/images/00144.jpg
+tandt/train/images/00145.jpg
+tandt/train/images/00146.jpg
+tandt/train/images/00147.jpg
+tandt/train/images/00148.jpg
+tandt/train/images/00149.jpg
+tandt/train/images/00150.jpg
+tandt/train/images/00151.jpg
+tandt/train/images/00152.jpg
+tandt/train/images/00153.jpg
+tandt/train/images/00154.jpg
+tandt/train/images/00155.jpg
+tandt/train/images/00156.jpg
+tandt/train/images/00157.jpg
+tandt/train/images/00158.jpg
+tandt/train/images/00159.jpg
+tandt/train/images/00160.jpg
+tandt/train/images/00161.jpg
+tandt/train/images/00162.jpg
+tandt/train/images/00163.jpg
+tandt/train/images/00164.jpg
+tandt/train/images/00165.jpg
+tandt/train/images/00166.jpg
+tandt/train/images/00167.jpg
+tandt/train/images/00168.jpg
+tandt/train/images/00169.jpg
+tandt/train/images/00170.jpg
+tandt/train/images/00171.jpg
+tandt/train/images/00172.jpg
+tandt/train/images/00173.jpg
+tandt/train/images/00174.jpg
+tandt/train/images/00175.jpg
+tandt/train/images/00176.jpg
+tandt/train/images/00177.jpg
+tandt/train/images/00178.jpg
+tandt/train/images/00179.jpg
+tandt/train/images/00180.jpg
+tandt/train/images/00181.jpg
+tandt/train/images/00182.jpg
+tandt/train/images/00183.jpg
+tandt/train/images/00184.jpg
+tandt/train/images/00185.jpg
+tandt/train/images/00186.jpg
+tandt/train/images/00187.jpg
+tandt/train/images/00188.jpg
+tandt/train/images/00189.jpg
+tandt/train/images/00190.jpg
+tandt/train/images/00191.jpg
+tandt/train/images/00192.jpg
+tandt/train/images/00193.jpg
+tandt/train/images/00194.jpg
+tandt/train/images/00195.jpg
+tandt/train/images/00196.jpg
+tandt/train/images/00197.jpg
+tandt/train/images/00198.jpg
+tandt/train/images/00199.jpg
+tandt/train/images/00200.jpg
+tandt/train/images/00201.jpg
+tandt/train/images/00202.jpg
+tandt/train/images/00203.jpg
+tandt/train/images/00204.jpg
+tandt/train/images/00205.jpg
+tandt/train/images/00206.jpg
+tandt/train/images/00207.jpg
+tandt/train/images/00208.jpg
+tandt/train/images/00209.jpg
+tandt/train/images/00210.jpg
+tandt/train/images/00211.jpg
+tandt/train/images/00212.jpg
+tandt/train/images/00213.jpg
+tandt/train/images/00214.jpg
+tandt/train/images/00215.jpg
+tandt/train/images/00216.jpg
+tandt/train/images/00217.jpg
+tandt/train/images/00218.jpg
+tandt/train/images/00219.jpg
+tandt/train/images/00220.jpg
+tandt/train/images/00221.jpg
+tandt/train/images/00222.jpg
+tandt/train/images/00223.jpg
+tandt/train/images/00224.jpg
+tandt/train/images/00225.jpg
+tandt/train/images/00226.jpg
+tandt/train/images/00227.jpg
+tandt/train/images/00228.jpg
+tandt/train/images/00229.jpg
+tandt/train/images/00230.jpg
+tandt/train/images/00231.jpg
+tandt/train/images/00232.jpg
+tandt/train/images/00233.jpg
+tandt/train/images/00234.jpg
+tandt/train/images/00235.jpg
+tandt/train/images/00236.jpg
+tandt/train/images/00237.jpg
+tandt/train/images/00238.jpg
+tandt/train/images/00239.jpg
+tandt/train/images/00240.jpg
+tandt/train/images/00241.jpg
+tandt/train/images/00242.jpg
+tandt/train/images/00243.jpg
+tandt/train/images/00244.jpg
+tandt/train/images/00245.jpg
+tandt/train/images/00246.jpg
+tandt/train/images/00247.jpg
+tandt/train/images/00248.jpg
+tandt/train/images/00249.jpg
+tandt/train/images/00250.jpg
+tandt/train/images/00251.jpg
+tandt/train/images/00252.jpg
+tandt/train/images/00253.jpg
+tandt/train/images/00254.jpg
+tandt/train/images/00255.jpg
+tandt/train/images/00256.jpg
+tandt/train/images/00257.jpg
+tandt/train/images/00258.jpg
+tandt/train/images/00259.jpg
+tandt/train/images/00260.jpg
+tandt/train/images/00261.jpg
+tandt/train/images/00262.jpg
+tandt/train/images/00263.jpg
+tandt/train/images/00264.jpg
+tandt/train/images/00265.jpg
+tandt/train/images/00266.jpg
+tandt/train/images/00267.jpg
+tandt/train/images/00268.jpg
+tandt/train/images/00269.jpg
+tandt/train/images/00270.jpg
+tandt/train/images/00271.jpg
+tandt/train/images/00272.jpg
+tandt/train/images/00273.jpg
+tandt/train/images/00274.jpg
+tandt/train/images/00275.jpg
+tandt/train/images/00276.jpg
+tandt/train/images/00277.jpg
+tandt/train/images/00278.jpg
+tandt/train/images/00279.jpg
+tandt/train/images/00280.jpg
+tandt/train/images/00281.jpg
+tandt/train/images/00282.jpg
+tandt/train/images/00283.jpg
+tandt/train/images/00284.jpg
+tandt/train/images/00285.jpg
+tandt/train/images/00286.jpg
+tandt/train/images/00287.jpg
+tandt/train/images/00288.jpg
+tandt/train/images/00289.jpg
+tandt/train/images/00290.jpg
+tandt/train/images/00291.jpg
+tandt/train/images/00292.jpg
+tandt/train/images/00293.jpg
+tandt/train/images/00294.jpg
+tandt/train/images/00295.jpg
+tandt/train/images/00296.jpg
+tandt/train/images/00297.jpg
+tandt/train/images/00298.jpg
+tandt/train/images/00299.jpg
+tandt/train/images/00300.jpg
+tandt/train/images/00301.jpg
+tandt/train/sparse/0/cameras.bin
+tandt/train/sparse/0/images.bin
+tandt/train/sparse/0/points3D.bin
+tandt/train/sparse/0/points3D.ply
+tandt/train/sparse/0/project.ini
+tandt/truck/images/000001.jpg
+tandt/truck/images/000002.jpg
+tandt/truck/images/000003.jpg
+tandt/truck/images/000004.jpg
+tandt/truck/images/000005.jpg
+tandt/truck/images/000006.jpg
+tandt/truck/images/000007.jpg
+tandt/truck/images/000008.jpg
+tandt/truck/images/000009.jpg
+tandt/truck/images/000010.jpg
+tandt/truck/images/000011.jpg
+tandt/truck/images/000012.jpg
+tandt/truck/images/000013.jpg
+tandt/truck/images/000014.jpg
+tandt/truck/images/000015.jpg
+tandt/truck/images/000016.jpg
+tandt/truck/images/000017.jpg
+tandt/truck/images/000018.jpg
+tandt/truck/images/000019.jpg
+tandt/truck/images/000020.jpg
+tandt/truck/images/000021.jpg
+tandt/truck/images/000022.jpg
+tandt/truck/images/000023.jpg
+tandt/truck/images/000024.jpg
+tandt/truck/images/000025.jpg
+tandt/truck/images/000026.jpg
+tandt/truck/images/000027.jpg
+tandt/truck/images/000028.jpg
+tandt/truck/images/000029.jpg
+tandt/truck/images/000030.jpg
+tandt/truck/images/000031.jpg
+tandt/truck/images/000032.jpg
+tandt/truck/images/000033.jpg
+tandt/truck/images/000034.jpg
+tandt/truck/images/000035.jpg
+tandt/truck/images/000036.jpg
+tandt/truck/images/000037.jpg
+tandt/truck/images/000038.jpg
+tandt/truck/images/000039.jpg
+tandt/truck/images/000040.jpg
+tandt/truck/images/000041.jpg
+tandt/truck/images/000042.jpg
+tandt/truck/images/000043.jpg
+tandt/truck/images/000044.jpg
+tandt/truck/images/000045.jpg
+tandt/truck/images/000046.jpg
+tandt/truck/images/000047.jpg
+tandt/truck/images/000048.jpg
+tandt/truck/images/000049.jpg
+tandt/truck/images/000050.jpg
+tandt/truck/images/000051.jpg
+tandt/truck/images/000052.jpg
+tandt/truck/images/000053.jpg
+tandt/truck/images/000054.jpg
+tandt/truck/images/000055.jpg
+tandt/truck/images/000056.jpg
+tandt/truck/images/000057.jpg
+tandt/truck/images/000058.jpg
+tandt/truck/images/000059.jpg
+tandt/truck/images/000060.jpg
+tandt/truck/images/000061.jpg
+tandt/truck/images/000062.jpg
+tandt/truck/images/000063.jpg
+tandt/truck/images/000064.jpg
+tandt/truck/images/000065.jpg
+tandt/truck/images/000066.jpg
+tandt/truck/images/000067.jpg
+tandt/truck/images/000068.jpg
+tandt/truck/images/000069.jpg
+tandt/truck/images/000070.jpg
+tandt/truck/images/000071.jpg
+tandt/truck/images/000072.jpg
+tandt/truck/images/000073.jpg
+tandt/truck/images/000074.jpg
+tandt/truck/images/000075.jpg
+tandt/truck/images/000076.jpg
+tandt/truck/images/000077.jpg
+tandt/truck/images/000078.jpg
+tandt/truck/images/000079.jpg
+tandt/truck/images/000080.jpg
+tandt/truck/images/000081.jpg
+tandt/truck/images/000082.jpg
+tandt/truck/images/000083.jpg
+tandt/truck/images/000084.jpg
+tandt/truck/images/000085.jpg
+tandt/truck/images/000086.jpg
+tandt/truck/images/000087.jpg
+tandt/truck/images/000088.jpg
+tandt/truck/images/000089.jpg
+tandt/truck/images/000090.jpg
+tandt/truck/images/000091.jpg
+tandt/truck/images/000092.jpg
+tandt/truck/images/000093.jpg
+tandt/truck/images/000094.jpg
+tandt/truck/images/000095.jpg
+tandt/truck/images/000096.jpg
+tandt/truck/images/000097.jpg
+tandt/truck/images/000098.jpg
+tandt/truck/images/000099.jpg
+tandt/truck/images/000100.jpg
+tandt/truck/images/000101.jpg
+tandt/truck/images/000102.jpg
+tandt/truck/images/000103.jpg
+tandt/truck/images/000104.jpg
+tandt/truck/images/000105.jpg
+tandt/truck/images/000106.jpg
+tandt/truck/images/000107.jpg
+tandt/truck/images/000108.jpg
+tandt/truck/images/000109.jpg
+tandt/truck/images/000110.jpg
+tandt/truck/images/000111.jpg
+tandt/truck/images/000112.jpg
+tandt/truck/images/000113.jpg
+tandt/truck/images/000114.jpg
+tandt/truck/images/000115.jpg
+tandt/truck/images/000116.jpg
+tandt/truck/images/000117.jpg
+tandt/truck/images/000118.jpg
+tandt/truck/images/000119.jpg
+tandt/truck/images/000120.jpg
+tandt/truck/images/000121.jpg
+tandt/truck/images/000122.jpg
+tandt/truck/images/000123.jpg
+tandt/truck/images/000124.jpg
+tandt/truck/images/000125.jpg
+tandt/truck/images/000126.jpg
+tandt/truck/images/000127.jpg
+tandt/truck/images/000128.jpg
+tandt/truck/images/000129.jpg
+tandt/truck/images/000130.jpg
+tandt/truck/images/000131.jpg
+tandt/truck/images/000132.jpg
+tandt/truck/images/000133.jpg
+tandt/truck/images/000134.jpg
+tandt/truck/images/000135.jpg
+tandt/truck/images/000136.jpg
+tandt/truck/images/000137.jpg
+tandt/truck/images/000138.jpg
+tandt/truck/images/000139.jpg
+tandt/truck/images/000140.jpg
+tandt/truck/images/000141.jpg
+tandt/truck/images/000142.jpg
+tandt/truck/images/000143.jpg
+tandt/truck/images/000144.jpg
+tandt/truck/images/000145.jpg
+tandt/truck/images/000146.jpg
+tandt/truck/images/000147.jpg
+tandt/truck/images/000148.jpg
+tandt/truck/images/000149.jpg
+tandt/truck/images/000150.jpg
+tandt/truck/images/000151.jpg
+tandt/truck/images/000152.jpg
+tandt/truck/images/000153.jpg
+tandt/truck/images/000154.jpg
+tandt/truck/images/000155.jpg
+tandt/truck/images/000156.jpg
+tandt/truck/images/000157.jpg
+tandt/truck/images/000158.jpg
+tandt/truck/images/000159.jpg
+tandt/truck/images/000160.jpg
+tandt/truck/images/000161.jpg
+tandt/truck/images/000162.jpg
+tandt/truck/images/000163.jpg
+tandt/truck/images/000164.jpg
+tandt/truck/images/000165.jpg
+tandt/truck/images/000166.jpg
+tandt/truck/images/000167.jpg
+tandt/truck/images/000168.jpg
+tandt/truck/images/000169.jpg
+tandt/truck/images/000170.jpg
+tandt/truck/images/000171.jpg
+tandt/truck/images/000172.jpg
+tandt/truck/images/000173.jpg
+tandt/truck/images/000174.jpg
+tandt/truck/images/000175.jpg
+tandt/truck/images/000176.jpg
+tandt/truck/images/000177.jpg
+tandt/truck/images/000178.jpg
+tandt/truck/images/000179.jpg
+tandt/truck/images/000180.jpg
+tandt/truck/images/000181.jpg
+tandt/truck/images/000182.jpg
+tandt/truck/images/000183.jpg
+tandt/truck/images/000184.jpg
+tandt/truck/images/000185.jpg
+tandt/truck/images/000186.jpg
+tandt/truck/images/000187.jpg
+tandt/truck/images/000188.jpg
+tandt/truck/images/000189.jpg
+tandt/truck/images/000190.jpg
+tandt/truck/images/000191.jpg
+tandt/truck/images/000192.jpg
+tandt/truck/images/000193.jpg
+tandt/truck/images/000194.jpg
+tandt/truck/images/000195.jpg
+tandt/truck/images/000196.jpg
+tandt/truck/images/000197.jpg
+tandt/truck/images/000198.jpg
+tandt/truck/images/000199.jpg
+tandt/truck/images/000200.jpg
+tandt/truck/images/000201.jpg
+tandt/truck/images/000202.jpg
+tandt/truck/images/000203.jpg
+tandt/truck/images/000204.jpg
+tandt/truck/images/000205.jpg
+tandt/truck/images/000206.jpg
+tandt/truck/images/000207.jpg
+tandt/truck/images/000208.jpg
+tandt/truck/images/000209.jpg
+tandt/truck/images/000210.jpg
+tandt/truck/images/000211.jpg
+tandt/truck/images/000212.jpg
+tandt/truck/images/000213.jpg
+tandt/truck/images/000214.jpg
+tandt/truck/images/000215.jpg
+tandt/truck/images/000216.jpg
+tandt/truck/images/000217.jpg
+tandt/truck/images/000218.jpg
+tandt/truck/images/000219.jpg
+tandt/truck/images/000220.jpg
+tandt/truck/images/000221.jpg
+tandt/truck/images/000222.jpg
+tandt/truck/images/000223.jpg
+tandt/truck/images/000224.jpg
+tandt/truck/images/000225.jpg
+tandt/truck/images/000226.jpg
+tandt/truck/images/000227.jpg
+tandt/truck/images/000228.jpg
+tandt/truck/images/000229.jpg
+tandt/truck/images/000230.jpg
+tandt/truck/images/000231.jpg
+tandt/truck/images/000232.jpg
+tandt/truck/images/000233.jpg
+tandt/truck/images/000234.jpg
+tandt/truck/images/000235.jpg
+tandt/truck/images/000236.jpg
+tandt/truck/images/000237.jpg
+tandt/truck/images/000238.jpg
+tandt/truck/images/000239.jpg
+tandt/truck/images/000240.jpg
+tandt/truck/images/000241.jpg
+tandt/truck/images/000242.jpg
+tandt/truck/images/000243.jpg
+tandt/truck/images/000244.jpg
+tandt/truck/images/000245.jpg
+tandt/truck/images/000246.jpg
+tandt/truck/images/000247.jpg
+tandt/truck/images/000248.jpg
+tandt/truck/images/000249.jpg
+tandt/truck/images/000250.jpg
+tandt/truck/images/000251.jpg
